fixed the email address not breaking in address contacts on firefox
git-svn-id: https://open.med.harvard.edu/svn/fphs-rails/trunk/railsapp@196 93467e27-a4b6-4d31-bc93-299e2bd7d087

--- a/app/assets/stylesheets/search_results.scss
+++ b/app/assets/stylesheets/search_results.scss
@@ -307,11 +307,12 @@ ul[data-address-is-us="false"]{
 strong.email {
     
     word-break: break-word;
+    word-wrap: break-word;
 
 }
 
 span.tracker-event-description {color: silver;}
 
-li.address-source strong, li.player-contact-source strong {
+li.player-info-source_name strong, li.address-source_name strong, li.player-contact-source_name strong {
     text-transform: lowercase;
 }
